# crypto_trading

./: .gitignore  README.md  backtesting.ipynb  data_loader.ipynb  fetch_data.py  learning.ipynb  main.ipynb  ml.py  ml_models_pt.py  ml_models_tf.py  order_book.py  pyproject.toml  requirements.txt
backtesting/: pyproject.toml
backtesting/backtesting/: HistoricMarketSimulator.py  MarketSimulator.py  Strategy.py
data_processing/: pyproject.toml
data_processing/data_processing/: FeatureCreation.py  InteractiveLiveProcessor.py  data_loader.py  live_prediction.py  ob_features.py  order_book.py  order_book_format.py  process_prediction_data.py  trade_features.py  trade_format.py  transform_data.py
data_retrieving/: pyproject.toml
data_retrieving/data_retrieving/: HistoricalDataRetriever.py  InteractiveLiveRetriever.py  LiveDataRetriever.py  PeriodicLiveRetriever.py
machine_learning/: pyproject.toml
machine_learning/machine_learning/: evaluation.py  ml.py  processing.py  wrapper.py
ml_models/: feature_creator.pkl  model.pth  pyproject.toml
ml_models/ml_models/: ml.py  ml_models_tf.py
my_ml_crypto_trading/backtesting/: HistoricMarketSimulator.py  Strategy.py
my_ml_crypto_trading/data_processing/: FeatureCreation.py  InteractiveLiveProcessor.py  data_loader.py  live_prediction.py  live_snapshot_decompression.py  live_snapshot_download.py  ob_features.py  trade_features.py
my_ml_crypto_trading/data_retrieving/: HistoricalDataRetriever.py  InteractiveHistoricalRetriever.py  InteractiveLiveRetriever.py  PeriodicLiveRetriever.py
my_ml_crypto_trading/machine_learning/: evaluation.py  training.py
notebooks/: backtesting.ipynb  data_loader.ipynb  learning.ipynb  main.ipynb
src/: InteractiveLiveRetriever.py  data_utils.py  main.ipynb  ml.py  ml_models_pt.py  order_book.py
(+9 files in other folders)
