[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_ml_crypto_trading"
version = "0.1.0"
authors = [
  { name="Noah Schlenker", email="noschl@proton.me" },
  { name="Paul Reisenberg"}
]
description = "A comprehensive backtesting and machine learning platform for trading."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib",
    "numpy",
    "seaborn",
    "scipy",
    "torch",
    "pybit",
    "scikit-learn",
    "plotly",
    "tabulate",
    "msgpack"
]

[tool.setuptools]
py-modules = ["my_ml_crypto_trading"]
